--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,42 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals", "plugin:tailwindcss/recommended"],
+  "rules": {
+    "@typescript-eslint/no-misused-promises": "off",
+    "@typescript-eslint/no-var-requires": "off",
+    "react/jsx-no-literals": ["error", {
+      "noStrings": true,
+      "allowedStrings": ["allowed"],
+      "ignoreProps": false,
+      "noAttributeStrings": true
+    }],
+    "react/jsx-curly-brace-presence": [
+      "error", {
+        "props": "always",
+        "children": "ignore",
+        "propElementValues": "always"
+      }
+    ],
+    "import/no-unresolved": "error",
+    "comma-dangle": ["error", "always-multiline"],
+    "react-hooks/exhaustive-deps": "warn",
+    "curly": "error",
+    "react/function-component-definition": [
+      "error",
+      {
+        "namedComponents": ["function-declaration", "arrow-function"]
+      }
+    ],
+    "react/jsx-filename-extension": [1, {
+      "extensions": [
+        ".ts",
+        ".tsx"
+      ]
+    }],
+    "react/style-prop-object": "off",
+    "no-use-before-define": "off",
+    "import/prefer-default-export": "off",
+    "import/extensions": ["error", "never"],
+    "react/prop-types": 0,
+    "@next/next/no-img-element": "off"
+  }
 }
