--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@vercel/postgres": "^0.9.0",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "next": "14.2.5",
     "next-international": "^1.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-player": "^2.16.0"
   },
   "devDependencies": {
     "@types/node": "^20",
