--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "next-international": "^1.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-player": "^2.16.0"
+    "react-hook-form": "^7.52.1",
+    "react-player": "^2.16.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
