--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@heroicons/react": "^2.1.5",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@types/react-lottie": "^1.2.10",
     "@vercel/postgres": "^0.9.0",
     "eslint-plugin-tailwindcss": "^3.17.4",
+    "lottie-react": "^2.4.0",
     "next": "14.2.5",
     "next-international": "^1.2.4",
     "react": "^18",
@@ -33,6 +35,7 @@
     "eslint-config-next": "14.2.5",
     "postcss": "^8.4.39",
     "prettier": "^3.3.3",
+    "react-lottie": "^1.2.4",
     "tailwindcss": "^3.4.5",
     "typescript": "^5"
   }
