--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "postinstall": "rm -rf node_modules/cypress"
   },
   "dependencies": {
     "@headlessui/react": "^2.1.2",
@@ -24,6 +25,9 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-player": "^2.16.0",
+    "react-lottie": "^1.2.4",
+    "tailwindcss": "^3.4.5",
+    "typescript": "^5",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
@@ -36,9 +40,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8.4.39",
-    "prettier": "^3.3.3",
-    "react-lottie": "^1.2.4",
-    "tailwindcss": "^3.4.5",
-    "typescript": "^5"
+    "prettier": "^3.3.3"
   }
 }
